log
Fri 10 Mar 2023 12:09:35 PM UTC: 
 tests:  0|7
total_score: 0/70
176dd6e
Fri 10 Mar 2023 12:11:17 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
17c3e25
Fri 10 Mar 2023 12:14:46 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:30:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   30 |     *max=*a[0];
      |          ^~~~~
exercises.c:31:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |     *min=*a[0]:
      |          ^~~~~
exercises.c:31:15: error: expected ‘;’ before ‘:’ token
   31 |     *min=*a[0]:
      |               ^
      |               ;
Compilation failed
1cf3c88
Fri 10 Mar 2023 12:15:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:30:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   30 |     *max=*a[0];
      |          ^~~~~
exercises.c:31:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |     *min=*a[0];
      |          ^~~~~
exercises.c:34:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       if (*a[k]>*max)*max=*a[k];
      |           ^~~~~
exercises.c:34:27: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       if (*a[k]>*max)*max=*a[k];
      |                           ^~~~~
exercises.c:35:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |       if (*a[k]<*min)*min=*a[k];
      |           ^~~~~
exercises.c:35:27: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |       if (*a[k]<*min)*min=*a[k];
      |                           ^~~~~
Compilation failed
978e300
Fri 10 Mar 2023 12:15:21 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:34:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       if (*a[k]>*max)*max=*a[k];
      |           ^~~~~
exercises.c:34:27: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       if (*a[k]>*max)*max=*a[k];
      |                           ^~~~~
exercises.c:35:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |       if (*a[k]<*min)*min=*a[k];
      |           ^~~~~
exercises.c:35:27: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |       if (*a[k]<*min)*min=*a[k];
      |                           ^~~~~
Compilation failed
99ff91a
Fri 10 Mar 2023 12:15:31 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
06a666d
Fri 10 Mar 2023 05:56:07 PM UTC: 
 tests:  2|5
total_score: 20/70
4ecc3dd
Thu 16 Mar 2023 05:34:51 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
0f30a29
Thu 16 Mar 2023 10:59:46 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
431248d
Fri 17 Mar 2023 10:14:53 AM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|3
total_score: 40/70
c8f2302
Fri 17 Mar 2023 10:21:09 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:112:9: error: ‘Vector’ has no member named ‘tamano’
  112 |    if (a->tamano != b->tamano || b->tamano != c->tamano) {
      |         ^~
exercises.c:112:22: error: ‘Vector’ has no member named ‘tamano’
  112 |    if (a->tamano != b->tamano || b->tamano != c->tamano) {
      |                      ^~
exercises.c:112:35: error: ‘Vector’ has no member named ‘tamano’
  112 |    if (a->tamano != b->tamano || b->tamano != c->tamano) {
      |                                   ^~
exercises.c:112:48: error: ‘Vector’ has no member named ‘tamano’
  112 |    if (a->tamano != b->tamano || b->tamano != c->tamano) {
      |                                                ^~
exercises.c:117:26: error: ‘Vector’ has no member named ‘tamano’
  117 |     for (int i = 0; i < a->tamano; i++) {
      |                          ^~
exercises.c:118:10: error: ‘Vector’ has no member named ‘elementos’
  118 |         c->elementos[i] = a->elementos[i] + b->elementos[i];
      |          ^~
exercises.c:118:28: error: ‘Vector’ has no member named ‘elementos’
  118 |         c->elementos[i] = a->elementos[i] + b->elementos[i];
      |                            ^~
exercises.c:118:46: error: ‘Vector’ has no member named ‘elementos’
  118 |         c->elementos[i] = a->elementos[i] + b->elementos[i];
      |                                              ^~
Compilation failed
5be29f0
Fri 17 Mar 2023 10:21:33 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:118:10: error: ‘Vector’ has no member named ‘elementos’
  118 |         c->elementos[i] = a->elementos[i] + b->elementos[i];
      |          ^~
exercises.c:118:28: error: ‘Vector’ has no member named ‘elementos’
  118 |         c->elementos[i] = a->elementos[i] + b->elementos[i];
      |                            ^~
exercises.c:118:46: error: ‘Vector’ has no member named ‘elementos’
  118 |         c->elementos[i] = a->elementos[i] + b->elementos[i];
      |                                              ^~
Compilation failed
12ebc85
Fri 17 Mar 2023 10:21:52 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 50/70
b8bae44
Fri 17 Mar 2023 10:22:48 AM UTC: 
 exercises.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  4|3
total_score: 40/70
51a6261
Fri 17 Mar 2023 10:23:14 AM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘obtenerValor’:
exercises.c:103:22: error: ‘Vector’ has no member named ‘tamano’
  103 |   if (i >= 0 && i < v->tamano) {
      |                      ^~
exercises.c:104:17: error: ‘Vector’ has no member named ‘elementos’
  104 |         return v->elementos[i];
      |                 ^~
Compilation failed
a5b1ab3
Fri 17 Mar 2023 10:23:39 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
984ac21
